// Vitest Snapshot v1, https://vitest.dev/guide/snapshot.html

exports[`kbd-generator snapshot tests > ANSI 104 デフォルト 1`] = `
";; Generated by kanata-web-config

(defcfg
  process-unmapped-keys yes
)

(defsrc
  esc f1 f2 f3 f4 f5 f6 f7 f8 f9 f10 f11 f12 prtsc slck pause
  grv 1 2 3 4 5 6 7 8 9 0 - = bspc ins home pgup nlck kp/ kp* kp-
  tab q w e r t y u i o p [ ] \\ del end pgdn kp7 kp8 kp9 kp+
  caps a s d f g h j k l ; ' ret kp4 kp5 kp6
  lsft z x c v b n m , . / rsft up kp1 kp2 kp3 kprt
  lctl lmet lalt spc ralt rmet comp rctl lft down rght kp0 kp.
)

(deflayer layer-0
  esc f1 f2 f3 f4 f5 f6 f7 f8 f9 f10 f11 f12 prtsc slck pause
  grv 1 2 3 4 5 6 7 8 9 0 - = bspc ins home pgup nlck kp/ kp* kp-
  tab q w e r t y u i o p [ ] \\ del end pgdn kp7 kp8 kp9 kp+
  caps a s d f g h j k l ; ' ret kp4 kp5 kp6
  lsft z x c v b n m , . / rsft up kp1 kp2 kp3 kprt
  lctl lmet lalt spc ralt rmet comp rctl lft down rght kp0 kp.
)
"
`;

exports[`kbd-generator snapshot tests > ANSI 104 複数レイヤー 1`] = `
";; Generated by kanata-web-config

(defcfg
  process-unmapped-keys yes
)

(defsrc
  esc f1 f2 f3 f4 f5 f6 f7 f8 f9 f10 f11 f12 prtsc slck pause
  grv 1 2 3 4 5 6 7 8 9 0 - = bspc ins home pgup nlck kp/ kp* kp-
  tab q w e r t y u i o p [ ] \\ del end pgdn kp7 kp8 kp9 kp+
  caps      a s d f g h j k l ; ' ret kp4 kp5 kp6
  lsft z  x c v b n m , . / rsft up kp1 kp2 kp3 kprt
  lctl lmet lalt spc                    ralt rmet comp rctl lft down rght kp0 kp.
)

(defalias
  caps_nav (tap-hold-press 200 200 esc (layer-while-held nav))
)

(deflayer layer-0
  esc f1 f2 f3 f4 f5 f6 f7 f8 f9 f10 f11 f12 prtsc slck pause
  grv 1 2 3 4 5 6 7 8 9 0 - = bspc ins home pgup nlck kp/ kp* kp-
  tab q w e r t y u i o p [ ] \\ del end pgdn kp7 kp8 kp9 kp+
  caps      a s d f g h j k l ; ' ret kp4 kp5 kp6
  lsft z  x c v b n m , . / rsft up kp1 kp2 kp3 kprt
  lctl lmet lalt spc                    ralt rmet comp rctl lft down rght kp0 kp.
)

(deflayer nav
  _   _  _  _  _  _  _  _  _  _  _   _   _   _     _    _
  _   _ _ _ _ _ _ _ _ _ _ _ _ _    _   _    _    _    _   _   _
  _   _ _ _ _ _ _ _ _ _ _ _ _ _ _   _   _    _   _   _   _
  @caps_nav b _ _ _ _ _ _ _ _ _ _ _   _   _   _
  _    XX _ _ _ _ _ _ _ _ _ _    _  _   _   _   _
  _    _    _    (layer-while-held nav) _    _    _    _    _   _    _    _   _
)
"
`;

exports[`kbd-generator snapshot tests > JIS 109 デフォルト（US remap OFF） 1`] = `
";; Generated by kanata-web-config

(defcfg
  process-unmapped-keys yes
)

(defsrc
  esc f1 f2 f3 f4 f5 f6 f7 f8 f9 f10 f11 f12 prtsc slck pause
  grv 1 2 3 4 5 6 7 8 9 0 - = ¥ bspc ins home pgup nlck kp/ kp* kp-
  tab q w e r t y u i o p [ ] ret del end pgdn kp7 kp8 kp9 kp+
  caps a s d f g h j k l ; ' \\ kp4 kp5 kp6
  lsft z x c v b n m , . / ro rsft up kp1 kp2 kp3 kprt
  lctl lmet lalt mhnk spc henk kana ralt rmet comp rctl lft down rght kp0 kp.
)

(deflayer layer-0
  esc f1 f2 f3 f4 f5 f6 f7 f8 f9 f10 f11 f12 prtsc slck pause
  grv 1 2 3 4 5 6 7 8 9 0 - = ¥ bspc ins home pgup nlck kp/ kp* kp-
  tab q w e r t y u i o p [ ] ret del end pgdn kp7 kp8 kp9 kp+
  caps a s d f g h j k l ; ' \\ kp4 kp5 kp6
  lsft z x c v b n m , . / ro rsft up kp1 kp2 kp3 kprt
  lctl lmet lalt mhnk spc henk kana ralt rmet comp rctl lft down rght kp0 kp.
)
"
`;

exports[`kbd-generator snapshot tests > JIS 109 デフォルト（US remap ON） 1`] = `
";; Generated by kanata-web-config
;; Requires kanata v1.4.0+ (fork action)

(defcfg
  process-unmapped-keys yes
)

(defsrc
  esc f1 f2 f3 f4 f5 f6 f7 f8 f9 f10 f11 f12 prtsc slck pause
  grv      1 2      3 4 5 6      7      8      9      0      -        =       ¥        bspc ins home pgup nlck kp/ kp* kp-
  tab q w e r t y u i o p [        ]        ret del end pgdn kp7 kp8 kp9 kp+
  caps a s d f g h j k l ;        '        \\        kp4 kp5 kp6
  lsft z x c v b n m , . / ro      rsft up kp1 kp2 kp3 kprt
  lctl lmet lalt mhnk spc henk kana ralt rmet comp rctl lft down rght kp0 kp.
)

(defalias
  ;; JIS→US conversion aliases
  jus-grv (fork S-[ = (lsft rsft))
  jus-2 (fork 2 (unshift [) (lsft rsft))
  jus-6 (fork 6 (unshift =) (lsft rsft))
  jus-7 (fork 7 6 (lsft rsft))
  jus-8 (fork 8 ' (lsft rsft))
  jus-9 (fork 9 8 (lsft rsft))
  jus-0 (fork 0 9 (lsft rsft))
  jus-min (fork - ro (lsft rsft))
  jus-eq (fork S-- ; (lsft rsft))
  jus-lbr ]
  jus-rbr \\
  jus-scl (fork ; (unshift ') (lsft rsft))
  jus-quo (fork S-7 2 (lsft rsft))
  jus-bsl (fork ro ¥ (lsft rsft))
  jus-yen (fork ro S-¥ (lsft rsft))
  jus-ro (fork ro S-¥ (lsft rsft))
)

(deflayer layer-0
  esc f1 f2 f3 f4 f5 f6 f7 f8 f9 f10 f11 f12 prtsc slck pause
  @jus-grv 1 @jus-2 3 4 5 @jus-6 @jus-7 @jus-8 @jus-9 @jus-0 @jus-min @jus-eq @jus-yen bspc ins home pgup nlck kp/ kp* kp-
  tab q w e r t y u i o p @jus-lbr @jus-rbr ret del end pgdn kp7 kp8 kp9 kp+
  caps a s d f g h j k l @jus-scl @jus-quo @jus-bsl kp4 kp5 kp6
  lsft z x c v b n m , . / @jus-ro rsft up kp1 kp2 kp3 kprt
  lctl lmet lalt mhnk spc henk kana ralt rmet comp rctl lft down rght kp0 kp.
)
"
`;

exports[`kbd-generator snapshot tests > JIS 109 複数レイヤー（US remap ON） 1`] = `
";; Generated by kanata-web-config
;; Requires kanata v1.4.0+ (fork action)

(defcfg
  process-unmapped-keys yes
)

(defsrc
  esc f1 f2 f3 f4 f5 f6 f7 f8 f9 f10 f11 f12 prtsc slck pause
  grv      1 2      3 4 5 6      7      8      9      0      -        =       ¥        bspc ins home pgup nlck kp/ kp* kp-
  tab q w e r t y u i o p [        ]        ret del end pgdn kp7 kp8 kp9 kp+
  caps      a s d f g h j k l ;        '        \\        kp4 kp5 kp6
  lsft z  x c v b n m , . / ro      rsft up kp1 kp2 kp3 kprt
  lctl lmet lalt mhnk spc                    henk kana ralt rmet comp rctl lft down rght kp0 kp.
)

(defalias
  ;; JIS→US conversion aliases
  jus-grv (fork S-[ = (lsft rsft))
  jus-2 (fork 2 (unshift [) (lsft rsft))
  jus-6 (fork 6 (unshift =) (lsft rsft))
  jus-7 (fork 7 6 (lsft rsft))
  jus-8 (fork 8 ' (lsft rsft))
  jus-9 (fork 9 8 (lsft rsft))
  jus-0 (fork 0 9 (lsft rsft))
  jus-min (fork - ro (lsft rsft))
  jus-eq (fork S-- ; (lsft rsft))
  jus-lbr ]
  jus-rbr \\
  jus-scl (fork ; (unshift ') (lsft rsft))
  jus-quo (fork S-7 2 (lsft rsft))
  jus-bsl (fork ro ¥ (lsft rsft))
  jus-yen (fork ro S-¥ (lsft rsft))
  jus-ro (fork ro S-¥ (lsft rsft))
  caps_nav (tap-hold-press 200 200 esc (layer-while-held nav))
)

(deflayer layer-0
  esc f1 f2 f3 f4 f5 f6 f7 f8 f9 f10 f11 f12 prtsc slck pause
  @jus-grv 1 @jus-2 3 4 5 @jus-6 @jus-7 @jus-8 @jus-9 @jus-0 @jus-min @jus-eq @jus-yen bspc ins home pgup nlck kp/ kp* kp-
  tab q w e r t y u i o p @jus-lbr @jus-rbr ret del end pgdn kp7 kp8 kp9 kp+
  caps      a s d f g h j k l @jus-scl @jus-quo @jus-bsl kp4 kp5 kp6
  lsft z  x c v b n m , . / @jus-ro rsft up kp1 kp2 kp3 kprt
  lctl lmet lalt mhnk spc                    henk kana ralt rmet comp rctl lft down rght kp0 kp.
)

(deflayer nav
  _   _  _  _  _  _  _  _  _  _  _   _   _   _     _    _
  _        _ _      _ _ _ _      _      _      _      _      _        _       _        _    _   _    _    _    _   _   _
  _   _ _ _ _ _ _ _ _ _ _ _        _        _   _   _   _    _   _   _   _
  @caps_nav b _ _ _ _ _ _ _ _ _        _        _        _   _   _
  _    XX _ _ _ _ _ _ _ _ _ _       _    _  _   _   _   _
  _    _    _    _    (layer-while-held nav) _    _    _    _    _    _    _   _    _    _   _
)
"
`;
